--- a/config.yml
+++ b/config.yml
@@ -2,3 +2,72 @@ baseURL: http://example.org/
 languageCode: en-us
 title: My New Hugo Site
 theme: "PaperMod"
+
+params:
+  env: development # to enable google analytics, opengraph, twitter-cards and schema.
+  title: River Lewis/@rivques
+  #description: "ExampleSite description"
+  keywords: [Blog, Portfolio, PaperMod]
+  author: Me
+  # author: ["Me", "You"] # multiple authors
+  DateFormat: "January 2, 2006"
+  defaultTheme: dark # dark, light
+  disableThemeToggle: false
+
+  ShowReadingTime: true
+  ShowShareButtons: true
+  ShowPostNavLinks: true
+  ShowBreadCrumbs: true
+  ShowCodeCopyButtons: false
+  ShowWordCount: true
+  ShowRssButtonInSectionTermList: true
+  UseHugoToc: true
+  disableSpecial1stPost: false
+  disableScrollToTop: false
+  comments: false
+  hidemeta: false
+  hideSummary: false
+  showtoc: false
+  tocopen: false
+
+
+  label:
+    text: "Home"
+    icon: /apple-touch-icon.png
+    iconHeight: 35
+
+  # profile-mode
+  profileMode:
+    enabled: true # needs to be explicitly set
+    title: River Lewis/@rivques
+    subtitle: "This is subtitle"
+    #imageUrl: "<img location>" logo here
+    imageWidth: 120
+    imageHeight: 120
+    imageTitle: my image
+    buttons:
+      - name: Posts
+        url: posts
+      - name: Tags
+        url: tags
+
+  # home-info mode
+
+  socialIcons:
+    - name: discord
+      url: "https://twitter.com/"
+    - name: github
+      url: "https://github.com/"
+
+
+  cover:
+    hidden: true # hide everywhere but not in structured data
+    hiddenInList: true # hide on list pages and home
+    hiddenInSingle: true # hide on single page
+
+menu:
+  main:
+    - identifier: things-i-do
+      name: Things I Do
+      url: /things-i-do/
+      weight: 10
