I think this works!

--- a/config.yml
+++ b/config.yml
@@ -14,20 +14,20 @@ params:
   defaultTheme: dark # dark, light
   disableThemeToggle: false
 
-  ShowReadingTime: true
-  ShowShareButtons: true
+  ShowReadingTime: false
+  ShowShareButtons: false
   ShowPostNavLinks: true
   ShowBreadCrumbs: true
   ShowCodeCopyButtons: false
   ShowWordCount: true
-  ShowRssButtonInSectionTermList: true
+  ShowRssButtonInSectionTermList: false
   UseHugoToc: true
   disableSpecial1stPost: false
   disableScrollToTop: false
   comments: false
   hidemeta: false
   hideSummary: false
-  showtoc: false
+  showtoc: true
   tocopen: false
 
 
@@ -40,16 +40,14 @@ params:
   profileMode:
     enabled: true # needs to be explicitly set
     title: River Lewis/@rivques
-    subtitle: "This is subtitle"
-    #imageUrl: "<img location>" logo here
+    subtitle: "Portfolio"
+    imageUrl: logo.png
     imageWidth: 120
     imageHeight: 120
-    imageTitle: my image
+    imageTitle: my logo
     buttons:
-      - name: Posts
-        url: posts
-      - name: Tags
-        url: tags
+      - name: High school engineering
+        url: high-school-engineering
 
   # home-info mode
 
@@ -67,10 +65,9 @@ params:
 
 menu:
   main:
-    - identifier: things-i-do
-      name: Things I Do
-      url: /things-i-do/
+    - identifier: high-school-engineering
+      name: High School Engineering
+      url: /high-school-engineering
       weight: 10
 
-staticDir:
-- docs
+pluralizelisttitles: "false"
