move fencing into ORP and fix comma splice

--- a/config.yml
+++ b/config.yml
@@ -81,9 +81,9 @@ menu:
       name: Other Random Projects
       url: /other-random-projects
       weight: 30
-    - identifier: fencing
-      name: Fencing
-      url: /fencing
-      weight: 40
+    # - identifier: fencing
+    #   name: Fencing
+    #   url: /fencing
+    #   weight: 40
 
 pluralizelisttitles: "false"
