add some more to WTPIDC docs also make some TOC tweaks

--- a/config.yml
+++ b/config.yml
@@ -87,3 +87,9 @@ menu:
     #   weight: 40
 
 pluralizelisttitles: "false"
+
+markup:
+  tableOfContents:
+    endLevel: 3
+    ordered: false
+    startLevel: 1
