switch email addr

--- a/config.yml
+++ b/config.yml
@@ -57,7 +57,7 @@ params:
 
   socialIcons:
     - name: email
-      url: "mailto:rivques@rivques.dev"
+      url: "mailto:web@rivques.dev"
     - name: discord
       url: "/discord"
     - name: github
